--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
 	],
 	"dependencies": {
 		"@types/lodash": "^4.17.0",
-		"ink": "^4.4.1",
+		"ink": "^5.0.0",
+		"ink-text-input": "^6.0.0",
 		"lodash": "^4.17.21",
 		"meow": "^11.0.0",
 		"react": "^18.2.0",
