--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "ink-command-pallete",
+	"name": "ink-command-palette",
 	"version": "0.0.0",
 	"license": "MIT",
 	"bin": "dist/cli.js",
